tests/parser/if-statement-block-error.stderr
error: expected '{'
 --> $DIR/if-statement-block-error.lox:1:10
  |
1 | if x > 0 _
  |          ^
