tests/parser/if-statement-block-error.lox
if x > 0 _
